--- a/src/components/select-field/select-field.module.scss
+++ b/src/components/select-field/select-field.module.scss
@@ -26,6 +26,7 @@
   }
 }
 
+/* stylelint-disable-next-line selector-pseudo-class-no-unknown */
 :global {
   .react-select {
     .react-select__dropdown-indicator {
